Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/InvalidLogicalComparation.ru
/? Descripción: caso de prueba que verifica que en una operacion logica,
/?  los tipos de los operandos sean iguales
/? Salida esperada:
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 7 | LOS TIPOS DE LA COMAPRACION NO SON BOOLEANOS


start{
Bool a;
a = 2 || true;
}